Pass context and scope directly to transformer. Add Transformer#scopedClasses for easier usage